# project-daystrom

./: .gitignore  .gitmodules  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: build-mac.yml  build-windows.yml  ci-mac.yml  ci.yml  release.yml
app/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.typecheck.json  vite.config.ts  vitest.config.ts
app/modules/app/: index.html
app/modules/app/src/: App.vue  main.ts  types.ts
app/modules/app/src/composables/: useGameState.ts
app/modules/app/src/composables/__tests__/: useGameState.spec.ts
app/modules/app/src/log/: TauriAppender.test.ts  TauriAppender.ts  index.ts
app/modules/app/src/log/__tests__/: TauriAppender.spec.ts
app/modules/backend/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
app/modules/backend/capabilities/: default.json
app/modules/backend/src/: commands.rs  lib.rs  logging.rs  macos_quit.rs  main.rs  monitor.rs
app/modules/backend/src/game/: entitlements.rs  launcher.rs  macos.rs  mod.rs  version.rs  windows.rs
companion/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
companion/modules/app/src/: App.vue  main.ts  types.ts
companion/modules/app/src/log/: index.test.ts  index.ts
companion/modules/backend/: Cargo.toml  tauri.conf.json
companion/modules/backend/src/: commands.rs  lib.rs  logging.rs  main.rs
companion/modules/common/src/: index.ts
scripts/: build.ts  package.json
stfc-mod/: xmake.lua
