[package]
name = "daystrom"
version = "0.1.0"
edition = "2021"

[lib]
name = "daystrom_lib"
crate-type = [
  "lib",
  "cdylib",
  "staticlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
colored = "3"
log = "0.4"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "12.0"
dirs = "6"
